# backend/openapi.json
@@ -1349,53 +1349,6 @@
         }
       }
     },
-    "/v1/literature/{ident}": {
-      "get": {
-        "tags": [
-          "literature"
-        ],
-        "summary": "获取单篇文献",
-        "operationId": "get_literature_v1_literature__ident__get",
-        "security": [
-          {
-            "HTTPBearer": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "ident",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "title": "Ident"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/LiteratureRecord"
-                }
-              }
-            }
-          },
-          "default": {
-            "description": "Problem Details (RFC 9457)",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Problem"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/v1/literature/{ident}/fulltext": {
       "get": {
         "tags": [
@@ -1625,6 +1578,53 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/LiteratureRecordList"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Problem Details (RFC 9457)",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Problem"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/literature/{ident}": {
+      "get": {
+        "tags": [
+          "literature"
+        ],
+        "summary": "获取单篇文献",
+        "operationId": "get_literature_v1_literature__ident__get",
+        "security": [
+          {
+            "HTTPBearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "ident",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Ident"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LiteratureRecord"
                 }
               }
             }
